# JobLog

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260216_01_step2_core_schema.py  20260216_02_step4_crawl_runs.py  20260216_03_step6_user_tables.py
app/: main.py
app/api/v1/: admin.py  applications.py  bookmarks.py  jobs.py
app/core/: config.py  db.py
app/frontend/: app.js  index.html  styles.css
app/scripts/: check_live_sources.py
app/seeds/: classification_rules_v1.sql  seed.py  sources_seed.sql
app/services/classifier/: rule_engine.py
app/services/crawler/: base.py  greenhouse.py  http_client.py  registry.py  remotive.py  runner.py
app/workers/: scheduler.py  tasks.py
deploy/: frontend.Dockerfile
tests/: test_crawlers.py
