[project]
name = "joblog"
version = "0.1.0"
description = "JobLog backend MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.32",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.2",
  "apscheduler>=3.10.4"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
